--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
               ">
             THE JOB FINDER API
           </h1>
-          <a href="#" class="btn btn-primary" style="padding: 20px 40px; border-radius: 60px; font-size:18px">View
+          <a href="https://github.com/mohammedadelabu/job-finder-api" class="btn btn-primary" style="padding: 20px 40px; border-radius: 60px; font-size:18px">View
             Source Codes</a>
           <!-- <a href="/auth/facebook" class="btn btn-secondary" style="padding: 20px 40px; border-radius: 60px; font-size:18px">Login
             via Facebook</a>
