--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
 <body>
   <!-- Background image -->
   <div class="p-5 text-center bg-image container-fluid" style="
-        background-image: url('https://boundingintocrypto.com/wp-content/uploads/2022/01/twitter-nfts.png');
+        background-image: url('https://i.ibb.co/D40H7cQ/dream1.jpg');
         min-height: 850px;
       ">
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
