changed the landing page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,14 +17,14 @@
 <body>
   <!-- Background image -->
   <div class="p-5 text-center bg-image container-fluid" style="
-        background-image: url('https://i.ibb.co/D40H7cQ/dream1.jpg');
+        background-image: url('https://i.ibb.co/GMQgvhd/job.png');
         min-height: 850px;
       ">
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.6)">
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white">
           <h1 class="mb-3 text-warning" style="
-                font-size: 70px;
+                font-size: 100px;
                 font-family: cursive;
               ">
             THE JOB FINDER API
